# vibecoding-

./: srt-translator.html  tic-tac-toe.html
76dollshop-announcement-system/: .dockerignore  .env.example  .gitignore  CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  demo.html  dub.json  dub.selections.json  railway.json  start.sh
76dollshop-announcement-system/app/: .env.example  .gitignore  Dockerfile  ENV_VARIABLES.md  MIGRATION_GUIDE.md  README.md  RELEASE_NOTES.md  ZEABUR_DEPLOYMENT.md  pyproject.toml  start.sh  zeabur.json
76dollshop-announcement-system/app/app/: __init__.py  auth.py  config.py  database.py  main.py
76dollshop-announcement-system/app/app/models/: __init__.py  announcement.py
76dollshop-announcement-system/app/app/routers/: admin.py  announcements.py  auth.py  quiz.py
76dollshop-announcement-system/app/app/static/css/: style.css
76dollshop-announcement-system/app/app/static/js/: app.js
76dollshop-announcement-system/app/app/templates/: admin.html  index.html
76dollshop-announcement-system/app/app/utils/: google_sheets.py
76dollshop-announcement-system/app/scripts/: migrate_database.py  restore_from_sheets.py
76dollshop-announcement-system/scripts/: append_to_sheets.py
chatgpt-prompt-extension/: .gitignore  CHANGELOG.md  ICON_GUIDE.md  PRE_PUBLISH_CHECKLIST.md  PRIVACY.md  PUBLISH_GUIDE.md  QUICK_START.md  README.md  background.js  content.js  manifest.json  package.sh  popup.html  popup.js  sample-prompts.json
(+3 files in other folders)
